[package]
name = "oxideleap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["serde_derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sea-orm = { version = "1.1.5", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
anyhow = "1.0.97"
tracing-appender = "0.2.3"

[dev-dependencies]
bytes = "1.10.1"
